--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ serde_derive = "1.0"
 sled = "0.34"
 arc-swap = "1.6.0"
 serde_cbor = "0.11"
+log = "0.4"
+anyhow = "1.0"
 
 # [dependencies.rocket]
 # version = "0.5.0"
