--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,18 +8,12 @@ publish = false
 
 [dependencies]
 rocket = { version = "0.5.0", features = ["json"] }
-#diesel = { version = "2.1", features = ["sqlite"] }
 serde = "1.0"
 serde_derive = "1.0"
 sled = "0.34"
 arc-swap = "1.6.0"
 serde_cbor = "0.11"
-log = "0.4"
 anyhow = "1.0"
 
-# [dependencies.rocket]
-# version = "0.5.0"
-# features = ["json"]
-
-[build-dependencies]
-#vcpkg = "0.2"
+[profile.dev]
+opt-level = 1
